syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "account-customer/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service AccountCustomer {
  // Sends a greeting
  rpc CreateAccountCustomer (createCustomerAccountRequest) returns (createCustomerAccountReply) {
    option (google.api.http) = {
      post: "v1/accountcustomer/create",
      body:"*"

    };
  }
}


message createCustomerAccountRequest{
  int64 accountId=1;
  string customerId=2;
}

message createCustomerAccountReply{
  int64 accountId=1;
  string customerId=2;
}

